# SAM

./: .gitignore  CMakeLists.txt  README.md
src/: PhonemeConvertor.cpp  PhonemeConvertor.h  ReciterTabs.h  RenderTabs.h  SDLOutput.cpp  SDLOutput.h  Sam.cpp  Sam.h  SamTabs.h  SampleConvertor.cpp  SampleConvertor.h  WavWriter.cpp  WavWriter.h  createtransitions.cpp  main.c  main.cpp  processframes.cpp  reciter.c  reciter.cpp  reciter.h  render.c  render.cpp  render.h  sam.c  sam.cpp  sam.h  tables.h
